# mikeGL

./: CMakeLists.txt  mikeGL.cpp
include/: shader.h
include/glad/: glad.h
libs/: CMakeLists.txt  glad.c
shaders/: fragment.glsl  vertex.glsl
